[package]
name = "betweenworlds-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "2.4.0"
reqwest = {version="0.11.20", features=["blocking"]}
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"
serde-enums = { path = "../serde-enums" }

