[package]
name = "player-tracker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
betweenworlds-api = { path = "../betweenworlds-api" }
chrono = {version="0.4.28", features = ["serde"]}
clokwerk = "0.4.0"
eframe = "0.22.0"
egui = "0.22.0"
num-format = "0.4.4"
serde = "1.0.188"
serde_json = "1.0.105"
